--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,12 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
+
+SANCTUM_STATEFUL_DOMAINS=localhost:3000
 
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
@@ -18,6 +20,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
+SESSION_DOMAIN=localhost
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
